# configctl

./: .gitignore  CMakeLists.txt
debian/: changelog  control  rules
src/: configctl.c  configctl.h  edit.c  edit.h  functions.c  functions.h  git.c  git.h  internal.h  main.c
tests/: CMakeLists.txt  test_delete_nodes.c  test_getters.c  test_init.c  test_init_git_dir.c  test_invalid.c  test_lists.c  test_setters.c
tests/config/: hello.xml  hello@2015-06-08.yang  hello@2015-06-08.yin
