SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/tests)

SET(CMAKE_C_FLAGS "-DPROJECT_LOCATION=${CMAKE_SOURCE_DIR}")


ADD_EXECUTABLE(getters test_getters.c)
TARGET_LINK_LIBRARIES(getters libconfigctl ${CMOCKA_LIBRARIES} ${LIBYANG_LIBRARIES} ${LIBGIT2_LIBRARY})
LIST(APPEND tests getters)

ADD_EXECUTABLE(setters test_setters.c)
TARGET_LINK_LIBRARIES(setters libconfigctl ${CMOCKA_LIBRARIES} ${LIBYANG_LIBRARIES} ${LIBGIT2_LIBRARY})
LIST(APPEND tests setters)

ADD_EXECUTABLE(invalid test_invalid.c)
TARGET_LINK_LIBRARIES(invalid libconfigctl ${CMOCKA_LIBRARIES} ${LIBYANG_LIBRARIES} ${LIBGIT2_LIBRARY})
LIST(APPEND tests invalid)

ADD_EXECUTABLE(delete_nodes test_delete_nodes.c)
TARGET_LINK_LIBRARIES(delete_nodes libconfigctl ${CMOCKA_LIBRARIES} ${LIBYANG_LIBRARIES} ${LIBGIT2_LIBRARY})
LIST(APPEND tests delete_nodes)

ADD_EXECUTABLE(lists test_lists.c)
TARGET_LINK_LIBRARIES(lists libconfigctl ${CMOCKA_LIBRARIES} ${LIBYANG_LIBRARIES} ${LIBGIT2_LIBRARY})
LIST(APPEND tests lists)

ADD_EXECUTABLE(init test_init.c)
TARGET_LINK_LIBRARIES(init libconfigctl ${CMOCKA_LIBRARIES} ${LIBYANG_LIBRARIES} ${LIBGIT2_LIBRARY})
LIST(APPEND tests init)

ADD_EXECUTABLE(init_git_dir test_init_git_dir.c)
TARGET_LINK_LIBRARIES(init_git_dir libconfigctl ${CMOCKA_LIBRARIES} ${LIBYANG_LIBRARIES} ${LIBGIT2_LIBRARY})
LIST(APPEND tests init_git_dir)


FIND_PROGRAM(VALGRIND_FOUND valgrind)
IF(VALGRIND_FOUND)
	FOREACH(test ${tests})
		ADD_TEST(NAME ${test} COMMAND valgrind --leak-resolution=low --show-leak-kinds=all ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${test})
	ENDFOREACH()
ELSE(VALGRIND_FOUND)
	FOREACH(test ${tests})
		ADD_TEST(NAME ${test} COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${test})
	ENDFOREACH()
ENDIF(VALGRIND_FOUND)
